Sunbeam & FML Sign

--- a/about/index.html
+++ b/about/index.html
@@ -106,7 +106,7 @@
 <h2 id=quote>Quote</h2>
 <p>I don’t design anything, the design happens when I pick things up, hold them in my hand, turn them over&mldr;. Is it Art? I honestly don’t care.</p>
 <h2 id=process>Process</h2>
-<p>I do get asked about my process. I will write something in the <a href=/work>thoughts</a> section one day. Till then, heres a short precis:</p>
+<p>I do get asked about my process. I will write something in the <a href=/work>thoughts</a> section one day. Till then, heres a short precis. This seems to correlate with other workers in the field, particularly the momentof inspiration on finding that <em>special</em> first bit&mldr; and then the desperate search for the <em>second</em> bit to suit the first&mldr;</p>
 <ol>
 <li>Collect junk.</li>
 <li>Collect more junk.</li>
@@ -115,7 +115,7 @@
 <li>Add other larger pieces till 90% complete.</li>
 <li>Accessorise with details till done.</li>
 </ol>
-<p>Also freely interspersed are &ldquo;leave off building until correct bit comes along&rdquo;, &ldquo;lose inspiration and put aside"and &ldquo;question life choices and watch TV till I get bored&rdquo;.</p>
+<p>Also freely interspersed are &ldquo;leave off building until correct bit comes along&rdquo;, &ldquo;lose inspiration and put aside&rdquo; and &ldquo;question life choices and watch TV till I get bored&rdquo;.</p>
 </div>
 </div>
 </div>
