--- a/works/misc/sunbeam/index.html
+++ b/works/misc/sunbeam/index.html
@@ -3,27 +3,27 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Miss New Zealand - Redgum & Rust</title>
+<title>Sunbeam - Redgum & Rust</title>
 <meta name=description content="Found object art from Tasmania.">
-<title itemprop=name>Miss New Zealand</title>
-<meta property="og:title" content="Miss New Zealand">
-<meta name=twitter:title content="Miss New Zealand">
-<meta itemprop=name content="Miss New Zealand">
+<title itemprop=name>Sunbeam</title>
+<meta property="og:title" content="Sunbeam">
+<meta name=twitter:title content="Sunbeam">
+<meta itemprop=name content="Sunbeam">
 <meta property="og:site_name" content>
 <meta name=description content="Found object art from Tasmania.">
 <meta itemprop=description content="Found object art from Tasmania.">
 <meta property="og:description" content="Found object art from Tasmania.">
 <meta name=twitter:description content="Found object art from Tasmania.">
-<base href=/works/figures/miss-new-zealand/>
-<link rel=canonical href=http://redgumandrust.com.au/works/figures/miss-new-zealand/ itemprop=url>
-<meta name=url content="http://redgumandrust.com.au/works/figures/miss-new-zealand/">
-<meta property="og:url" content="http://redgumandrust.com.au/works/figures/miss-new-zealand/">
-<meta name=twitter:url content="http://redgumandrust.com.au/works/figures/miss-new-zealand/">
+<base href=/works/misc/sunbeam/>
+<link rel=canonical href=http://redgumandrust.com.au/works/misc/sunbeam/ itemprop=url>
+<meta name=url content="http://redgumandrust.com.au/works/misc/sunbeam/">
+<meta property="og:url" content="http://redgumandrust.com.au/works/misc/sunbeam/">
+<meta name=twitter:url content="http://redgumandrust.com.au/works/misc/sunbeam/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:creator content="Tom Harris (Redgum & Rust)">
-<meta itemprop=image content="http://redgumandrust.com.au/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_800x418_fill_box_center.png">
-<meta property="og:image" content="http://redgumandrust.com.au/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_800x418_fill_box_center.png">
-<meta name=twitter:image content="http://redgumandrust.com.au/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_800x418_fill_box_center.png">
+<meta itemprop=image content="http://redgumandrust.com.au/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_800x418_fill_box_center.png">
+<meta property="og:image" content="http://redgumandrust.com.au/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_800x418_fill_box_center.png">
+<meta name=twitter:image content="http://redgumandrust.com.au/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_800x418_fill_box_center.png">
 <meta property="og:locale" content="en">
 <link rel=icon type=image/png href=http://redgumandrust.com.au/favicon.ico>
 <link rel=stylesheet href=http://redgumandrust.com.au/css/main.css>
@@ -69,27 +69,27 @@
 </div>
 </nav>
 <section class=section>
-<div class=slide info=true path=/works/figures/miss-new-zealand/>
+<div class=slide info=true path=/works/misc/sunbeam/>
 <div>
 <div class=slide-imgs>
 <div>
 <div class="center column slide-meta-title">
-<a class=a-clean href=/works/figures/miss-new-zealand/>Miss New Zealand</a>
+<a class=a-clean href=/works/misc/sunbeam/>Sunbeam</a>
 </div>
 <div>
 <div>
-<img src=/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=4500>
+<img src=/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=2578>
 </div>
 </div>
 <div class=center>
 <div class="slide-meta columns is-mobile">
 <div class="center column slide-meta-el">
 <div class=slide-tags>
-<a class=grey href=http://redgumandrust.com.au/tags/figures>#figures</a>
+<a class=grey href=http://redgumandrust.com.au/tags/misc>#misc</a>
 </div>
 </div>
 <div class="center column slide-meta-el grey">
-<p>October 30, 2015</p>
+<p>April 26, 2018</p>
 </div>
 </div>
 </div>
@@ -102,16 +102,24 @@
 <details>
 <summary>Exif</summary>
 <ul>
-<li>Date: October 30, 2015</li>
+<li>Date: April 26, 2018</li>
+<li>Exposure Time: 1/60</li>
+<li>F Number: 5</li>
+<li>Focal Length: 18</li>
+<li>ISO Speed Ratings: 200</li>
+<li>Model: NIKON D90</li>
 </ul>
 </details>
 </div>
-<p><strong>Miss New Zealand</strong>&rsquo;s name was inspired by the mascot for the Sydney Mardi Gras one year, who was a 1950&rsquo;s young lady in twinset & pearls, who obviously never went out without her coat, hat and gloves.</p>
-<p>The starting point was the novelty Harrods branded padlock, it was an obvious handbag. Her body is a trailer plug, arms from a gas lighter and hands are electrical terminals. Her shoes are also some sort of electrical clippy thing. Her hat is a brass nut from a plumbing fitting.</p>
-<p>I was pleases that she actually balances on her feet, its quite tricky to get this right, which is why so many of my pieces repose on plinths and podia.</p>
-<p>Here&rsquo;s a lineup with a couple of other small figures.
-<img src=/images/works/groups/1669983_650124805025133_1988094974_o.jpg alt="small figures lineup"></p>
-<p>Also appearing are the Oyster Rabbit and a funny apple that looked to me like a cartoon Chinaman so I made him a hat.</p>
+<p><strong>Sunbeam</strong> was a long time in the making. The inspiritational piece for mewas when I picked up an old Sunbeam brand cake mixer on hard rubbish, and then I dropped it and broke off the handle, which was made of brittle bakelite. I then removed the handle, and the hole in the top looked like a cockpit, with the lovely 50s design of the mixer forming the body of a retro-futuristic vehicle. Somehow a pair of wheels from the nozzle of a garden blower got fitted, and a single trailing wheel that came from a sewing machine.</p>
+<p>But there it stalled, as I wanted a figure in the cockpit, and I could never find one&mldr; until years later I found a fairly hideous doll which I&rsquo;m told is a &ldquo;Bratz&rdquo;, and the legs came off and I made a little propellor out of a brass valve.</p>
+<p>I left her sitting on my bench at my shared studio space at Footscray Maker Lab, and Emily the caretaker wandered by. She loved her and added her own vision of a leopard print crop top and a hairdo using industrial strength hair lacquer made specially for punks.</p>
+<p>Since then Sunbeam has always been around my house, a little ray of sushine with a heart of gold if you can get over the miniature-cyborg-punk-doll vibe.</p>
+<p>Here&rsquo;s Emily in her caravan and succulent garden.</p>
+<p>Before Emily&rsquo;s makeover&mldr;</p>
+<p><img src=/images/works/sunbeam/20180319_161359.jpg alt=Before></p>
+<p>And after&mldr;</p>
+<p><img src=/images/works/sunbeam/20180320_111035.jpg alt=After></p>
 </div>
 </div>
 </div>
