--- a/works/misc/fml-sign/index.html
+++ b/works/misc/fml-sign/index.html
@@ -3,27 +3,27 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Miss New Zealand - Redgum & Rust</title>
+<title>Fml Sign - Redgum & Rust</title>
 <meta name=description content="Found object art from Tasmania.">
-<title itemprop=name>Miss New Zealand</title>
-<meta property="og:title" content="Miss New Zealand">
-<meta name=twitter:title content="Miss New Zealand">
-<meta itemprop=name content="Miss New Zealand">
+<title itemprop=name>Fml Sign</title>
+<meta property="og:title" content="Fml Sign">
+<meta name=twitter:title content="Fml Sign">
+<meta itemprop=name content="Fml Sign">
 <meta property="og:site_name" content>
 <meta name=description content="Found object art from Tasmania.">
 <meta itemprop=description content="Found object art from Tasmania.">
 <meta property="og:description" content="Found object art from Tasmania.">
 <meta name=twitter:description content="Found object art from Tasmania.">
-<base href=/works/figures/miss-new-zealand/>
-<link rel=canonical href=http://redgumandrust.com.au/works/figures/miss-new-zealand/ itemprop=url>
-<meta name=url content="http://redgumandrust.com.au/works/figures/miss-new-zealand/">
-<meta property="og:url" content="http://redgumandrust.com.au/works/figures/miss-new-zealand/">
-<meta name=twitter:url content="http://redgumandrust.com.au/works/figures/miss-new-zealand/">
+<base href=/works/misc/fml-sign/>
+<link rel=canonical href=http://redgumandrust.com.au/works/misc/fml-sign/ itemprop=url>
+<meta name=url content="http://redgumandrust.com.au/works/misc/fml-sign/">
+<meta property="og:url" content="http://redgumandrust.com.au/works/misc/fml-sign/">
+<meta name=twitter:url content="http://redgumandrust.com.au/works/misc/fml-sign/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:creator content="Tom Harris (Redgum & Rust)">
-<meta itemprop=image content="http://redgumandrust.com.au/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_800x418_fill_box_center.png">
-<meta property="og:image" content="http://redgumandrust.com.au/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_800x418_fill_box_center.png">
-<meta name=twitter:image content="http://redgumandrust.com.au/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_800x418_fill_box_center.png">
+<meta itemprop=image content="http://redgumandrust.com.au/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_800x418_fill_box_center.png">
+<meta property="og:image" content="http://redgumandrust.com.au/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_800x418_fill_box_center.png">
+<meta name=twitter:image content="http://redgumandrust.com.au/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_800x418_fill_box_center.png">
 <meta property="og:locale" content="en">
 <link rel=icon type=image/png href=http://redgumandrust.com.au/favicon.ico>
 <link rel=stylesheet href=http://redgumandrust.com.au/css/main.css>
@@ -69,27 +69,27 @@
 </div>
 </nav>
 <section class=section>
-<div class=slide info=true path=/works/figures/miss-new-zealand/>
+<div class=slide info=true path=/works/misc/fml-sign/>
 <div>
 <div class=slide-imgs>
 <div>
 <div class="center column slide-meta-title">
-<a class=a-clean href=/works/figures/miss-new-zealand/>Miss New Zealand</a>
+<a class=a-clean href=/works/misc/fml-sign/>Fml Sign</a>
 </div>
 <div>
 <div>
-<img src=/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=4500>
+<img src=/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=2250>
 </div>
 </div>
 <div class=center>
 <div class="slide-meta columns is-mobile">
 <div class="center column slide-meta-el">
 <div class=slide-tags>
-<a class=grey href=http://redgumandrust.com.au/tags/figures>#figures</a>
+<a class=grey href=http://redgumandrust.com.au/tags/misc>#misc</a>
 </div>
 </div>
 <div class="center column slide-meta-el grey">
-<p>October 30, 2015</p>
+<p>May 26, 2018</p>
 </div>
 </div>
 </div>
@@ -102,16 +102,21 @@
 <details>
 <summary>Exif</summary>
 <ul>
-<li>Date: October 30, 2015</li>
+<li>Date: May 26, 2018</li>
+<li>Aperture: 2.27</li>
+<li>Exposure Time: 1/100</li>
+<li>F Number: 2.2</li>
+<li>Focal Length: 3.46</li>
+<li>ISO Speed Ratings: 50</li>
+<li>Model: CPH1701</li>
 </ul>
 </details>
 </div>
-<p><strong>Miss New Zealand</strong>&rsquo;s name was inspired by the mascot for the Sydney Mardi Gras one year, who was a 1950&rsquo;s young lady in twinset & pearls, who obviously never went out without her coat, hat and gloves.</p>
-<p>The starting point was the novelty Harrods branded padlock, it was an obvious handbag. Her body is a trailer plug, arms from a gas lighter and hands are electrical terminals. Her shoes are also some sort of electrical clippy thing. Her hat is a brass nut from a plumbing fitting.</p>
-<p>I was pleases that she actually balances on her feet, its quite tricky to get this right, which is why so many of my pieces repose on plinths and podia.</p>
-<p>Here&rsquo;s a lineup with a couple of other small figures.
-<img src=/images/works/groups/1669983_650124805025133_1988094974_o.jpg alt="small figures lineup"></p>
-<p>Also appearing are the Oyster Rabbit and a funny apple that looked to me like a cartoon Chinaman so I made him a hat.</p>
+<p><strong>FML Sign</strong> was a sign for the shared studio space &ldquo;Footscray Maker Lab&rdquo; or <a href=https://footscraymakerlab.com/ target=_blank rel=noopener>FML</a> in inner Melbourne. Situated in a semi-derelict warehouse that the owners' only leased to us as I suspect no-one else would rent it. It wasanoted rave venue in the 90s, and there was plenty of graffiti in the place. It was an interesting experience at a difficult personal time, and certainly gave me something else to think about.</p>
+<p>The sign was intended to go on the roof on a wire fence that had once contained the building&rsquo;s electrical supply, backlit with red diffused light (shades of Dark Mofo?), but it ended up being fixed to a wall in the yard. I don&rsquo;t have a good photo of it now. I still think it would look fantastic backlit.</p>
+<p>I built the frame freehand with strap iron, and then infilled with the most lightweight bits of steel that I could find. I think I got a good selection of shapes. I used fluxcore wire in the MIG, as it makes a good weld even through paint or plating.</p>
+<p>Looks like I sharpened this photo up a bit, the place rarely looked that clean!</p>
+<p><img src=/images/works/fml-sign/IMG20180527084616-EFFECTS-edited.jpg alt="Overall shot edited"></p>
 </div>
 </div>
 </div>
