--- a/404.html
+++ b/404.html
@@ -1,25 +1,24 @@
 <!doctype html><html>
 <head>
-<meta name=generator content="Hugo 0.92.2">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Redgum & Rust</title>
-<meta name=description content="Found object art from Tasmania.">
-<title itemprop=name>Redgum & Rust</title>
-<meta property="og:title" content="Redgum & Rust">
-<meta name=twitter:title content="Redgum & Rust">
-<meta itemprop=name content="Redgum & Rust">
+<title>404 - You lost</title>
+<meta name=description content="You lost">
+<title itemprop=name>404</title>
+<meta property="og:title" content="404">
+<meta name=twitter:title content="404">
+<meta itemprop=name content="404">
 <meta property="og:site_name" content>
-<meta name=description content="Found object art from Tasmania.">
-<meta itemprop=description content="Found object art from Tasmania.">
-<meta property="og:description" content="Found object art from Tasmania.">
-<meta name=twitter:description content="Found object art from Tasmania.">
-<base href=/>
-<link rel=canonical href=http://redgumandrust.com.au/ itemprop=url>
-<meta name=url content="http://redgumandrust.com.au/">
-<meta property="og:url" content="http://redgumandrust.com.au/">
-<meta name=twitter:url content="http://redgumandrust.com.au/">
+<meta name=description content="You lost">
+<meta itemprop=description content="You lost">
+<meta property="og:description" content="You lost">
+<meta name=twitter:description content="You lost">
+<base href=/404.html>
+<link rel=canonical href=http://redgumandrust.com.au/404.html itemprop=url>
+<meta name=url content="http://redgumandrust.com.au/404.html">
+<meta property="og:url" content="http://redgumandrust.com.au/404.html">
+<meta name=twitter:url content="http://redgumandrust.com.au/404.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:creator content="Tom Harris (Redgum & Rust)">
 <meta property="og:locale" content="en">
@@ -31,17 +30,25 @@
 <style>@font-face{font-family:open sans regular;src:url(http://redgumandrust.com.au/fonts/OpenSans/OpenSans-Regular.ttf)format('truetype');font-weight:400;font-style:normal}@font-face{font-family:open sans bold;src:url(http://redgumandrust.com.au/fonts/OpenSans/OpenSans-Bold.ttf)format('truetype');font-weight:700;font-style:normal}@font-face{font-family:open sans italic;src:url(http://redgumandrust.com.au/fonts/OpenSans/OpenSans-Italic.ttf)format('truetype');font-weight:400;font-style:italic}@font-face{font-family:open sans bold italic;src:url(http://redgumandrust.com.au/fonts/OpenSans/OpenSans-BoldItalic.ttf)format('truetype');font-weight:700;font-style:italic}body{font-family:open sans regular}</style>
 </head>
 <body>
-<section class="hero is-fullheight welcome" style=background-image:url(http://redgumandrust.com.au/background.jpeg)>
 <nav class=navbar role=navigation aria-label="main navigation">
 <div class=navbar-start>
 <div class=logo>
-<a href=/>
+<a href=/works/>
 <img class=logo src=http://redgumandrust.com.au/logo.png>
 </a>
 </div>
 </div>
 <div class=navbar-middle>
-<a class=a-clean href=/><p class=welcome-title>Redgum & Rust</p></a>
+<a class=a-clean href=/works/><p class=welcome-title>Redgum & Rust</p></a>
+<div class=menu>
+<a href=/works/>works</a>
+/
+<a href=/figures/>figures</a>
+/
+<a href=/misc/>misc</a>
+/
+<a href=/about/>about</a>
+</div>
 </div>
 <div class=navbar-end>
 <div class=socials>
@@ -58,23 +65,28 @@
 </div>
 </div>
 </nav>
-<div class="hero-body has-text-centered">
-<div class=container>
-<div class=enter>
-<button onclick="window.location.href='/works/'" class="button is-white is-large is-outlined">enter</button>
+<body>
+<section class="hero is-fullheight">
+<div class=hero-body>
+<div>
+<div class=header-404>
+<img src=/eternity.png alt>
 </div>
-<p>Found object art from Tasmania.</p>
-<p>Giving junk new life...</p>
+<div class=body-404>
+<p class=subtitle-404>This is not where you want to be</p>
+<p class=title-404>404</p>
+<a href=http://redgumandrust.com.au>Go home</a>
 </div>
 </div>
-<div class=welcome-end>
+</div>
+</section>
+<footer class=footer>
 <div class="content has-text-centered">
 <p>
 All rights reserved. You may use content with attribution and a link to this site. <br>
 © 2023, Tom Harris (Redgum & Rust).
 </p>
 </div>
-</div>
-</section>
+</footer>
 </body>
 </html>
