New version to checkout how it looks online.

--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,11 @@
 /
 <a href=/figures/>figures</a>
 /
+<a href=/fragments/>fragments</a>
+/
 <a href=/misc/>misc</a>
+/
+<a href=/thoughts/>thoughts</a>
 /
 <a class=active href=/about/>about</a>
 </div>
@@ -98,7 +102,7 @@
 <p>Tom has been fascinated by machinery for as long as he can remember. Especially old, obsolete machinery, unloved, just short of the junk pile. Usually this fascination involved taking it apart. For the last decade hes started putting it back together, in new forms&mldr;</p>
 <p>He has no art training, having been told at school that because he couldn&rsquo;t draw he was excluded from art. He has worked as an engineer all his adult life, bouncing between electronics and computer programming, across a variety of industries, but always with an appreciation of the whimsical.</p>
 <p>Tom’s art is best described as folk art assemblage sculpture, made from parts from discarded appliances, worn out machinery & industrial detritus. When he lived in Melbourne he would cruise the streets where a yearly &ldquo;hard waste&rdquo; collection was due, scoring treasure from the roadside.</p>
-<p>He makes mainly figures, faces, animals & trophy heads, with a strong inspiration from 1950&rsquo;s robotsthe occasional abstract. They have been described as quirky, fun & accessible, kids and adults who have not lost the appreciation of the odd enjoy them a lot.</p>
+<p>He makes mainly figures, faces, animals & trophy heads, with a strong inspiration from 1950&rsquo;s robots. What look like abstracts are inspired by landscapes and nature. They have been described as quirky, fun & accessible, kids and adults who have not lost the appreciation of the odd enjoy them a lot.</p>
 <h2 id=a-story>A Story</h2>
 <p>Some time ago, just before organic life started, there must have been an oversupply of energy, reactive gases, organic molecules. Just think of them, lying around in piles, looking untidy, smelling the place up. There was no two ways about it, something had to be done. So organic life began, as a means of resolving the tension.</p>
 <p>Now there is an oversupply of another kind. Broken appliances, last year’s must-have techno-toys, worn-out machinery, the general detritus of a million sheds and garages.</p>
