--- a/works/figures/the-reader/index.html
+++ b/works/figures/the-reader/index.html
@@ -48,7 +48,11 @@
 /
 <a href=/figures/>figures</a>
 /
+<a href=/fragments/>fragments</a>
+/
 <a href=/misc/>misc</a>
+/
+<a href=/thoughts/>thoughts</a>
 /
 <a href=/about/>about</a>
 </div>
@@ -106,7 +110,7 @@
 </ul>
 </details>
 </div>
-<p><strong>The Reader</strong> is just made to sit on a shelf and keeps very much to herself (I always think of it as a &ldquo;her&rdquo;). I&rsquo;m not sure what shes made of, just some rusty iron I picked up, I do remember being inspired by the wonderful textures that rust gives to iron after a few years or decades.</p>
+<p><strong>The Reader</strong> is just made to sit on a shelf and keeps very much to herself (I always think of it as a &ldquo;her&rdquo;). I&rsquo;m not sure what she&rsquo;s made of, just some rusty iron I picked up, I do remember being inspired by the wonderful textures that rust gives to iron after a few years or decades.</p>
 <p>Her legs are a pair of hinges from an old Singer sewing machine that allowed it to fold away into the wooden base.</p>
 </div>
 </div>
