--- a/works/misc/good-ship-hobo/index.html
+++ b/works/misc/good-ship-hobo/index.html
@@ -48,7 +48,11 @@
 /
 <a href=/figures/>figures</a>
 /
+<a href=/fragments/>fragments</a>
+/
 <a href=/misc/>misc</a>
+/
+<a href=/thoughts/>thoughts</a>
 /
 <a href=/about/>about</a>
 </div>
@@ -113,7 +117,7 @@
 </ul>
 </details>
 </div>
-<p><strong>The Good Ship Hobo</strong> was a collaboration with Claude Ciccione of Belgrave. I made the hull out of abroken upright from a set of Brownbuilt steel shelves, the row of holes where the shelves could be fixed looked to me like portholes. I did get the hull welded up by a professional welder who is also an artist. Claude and I worked on the trimmings on the deck together, using mainly my bits & pieces.</p>
+<p><strong>The Good Ship Hobo</strong> was a collaboration with Claude Ciccione of Belgrave. I made the hull out of an upright from a set of Brownbuilt steel shelves, the row of holes where the shelves could be fixed looked to me like portholes. I did get the hull welded up by a professional welder who is also an artist. Claude and I worked on the trimmings on the deck together, using mainly my bits & pieces.</p>
 <p>Heres a shot of the complete display I made for the show.
 <img src=/images/works/groups/20170115_175807.jpg alt="Show display"></p>
 <p>And here are some work in progress shots taken on a dull day at Claude&rsquo;s house in Belgrave.</p>
@@ -121,6 +125,7 @@
 <img src=/images/works/good-ship-hobo/20170111_093831.jpg alt="WIP 2">
 <img src=/images/works/good-ship-hobo/20170111_111304.jpg alt="WIP 3">
 <img src=/images/works/good-ship-hobo/20170111_111308.jpg alt="WIP 4"></p>
+<p>Since The Good Ship Hobo sold (my biggest sale!) at the show I don&rsquo;t have any better photos. I installed LEDs inside the hull which shone out of the portholes so she looked fantastic in subdued lighting, like a real ship. I hope she went to a good home.</p>
 </div>
 </div>
 </div>
