--- a/404.html
+++ b/404.html
@@ -45,7 +45,11 @@
 /
 <a href=/figures/>figures</a>
 /
+<a href=/fragments/>fragments</a>
+/
 <a href=/misc/>misc</a>
+/
+<a href=/thoughts/>thoughts</a>
 /
 <a href=/about/>about</a>
 </div>
