--- a/figures/index.html
+++ b/figures/index.html
@@ -45,7 +45,11 @@
 /
 <a class=active href=/figures/>figures</a>
 /
+<a href=/fragments/>fragments</a>
+/
 <a href=/misc/>misc</a>
+/
+<a href=/thoughts/>thoughts</a>
 /
 <a href=/about/>about</a>
 </div>
@@ -105,14 +109,12 @@
 <div class="columns work-width is-mobile is-multiline">
 <div class=column>
 <div class=center>
-<div class=image-box>
+<div class="image-box alittle">
 <img src=/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1500 onclick=openSlider(),currentSlide(1)>
 </div>
 </div>
-</div>
-<div class=column>
 <div class=center>
-<div class=image-box>
+<div class="image-box alittle">
 <img src=/images/works/the-reader/10547759_715064518531161_5958528345548140784_o_hu94f226fa66d2963814dbcc4ff3be4e98_65635_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1499 onclick=openSlider(),currentSlide(2)>
 </div>
 </div>
@@ -205,7 +207,7 @@
 </ul>
 </details>
 </div>
-<p><strong>The Reader</strong> is just made to sit on a shelf and keeps very much to herself (I always think of it as a &ldquo;her&rdquo;). I&rsquo;m not sure what shes made of, just some rusty iron I picked up, I do remember being inspired by the wonderful textures that rust gives to iron after a few years or decades.</p>
+<p><strong>The Reader</strong> is just made to sit on a shelf and keeps very much to herself (I always think of it as a &ldquo;her&rdquo;). I&rsquo;m not sure what she&rsquo;s made of, just some rusty iron I picked up, I do remember being inspired by the wonderful textures that rust gives to iron after a few years or decades.</p>
 <p>Her legs are a pair of hinges from an old Singer sewing machine that allowed it to fold away into the wooden base.</p>
 </div>
 </div>
