Added Sound Wave & Iron Mirror.

--- a/about/index.html
+++ b/about/index.html
@@ -49,8 +49,6 @@
 /
 <a href=/misc/>misc</a>
 /
-<a href=/thoughts/>thoughts</a>
-/
 <a class=active href=/about/>about</a>
 </div>
 </div>
@@ -110,11 +108,11 @@
 <h2 id=quote>Quote</h2>
 <p>I don’t design anything, the design happens when I pick things up, hold them in my hand, turn them over&mldr;. Is it Art? I honestly don’t care.</p>
 <h2 id=process>Process</h2>
-<p>I do get asked about my process. I will write something in the <a href=/work>thoughts</a> section one day. Till then, heres a short precis. This seems to correlate with other workers in the field, particularly the momentof inspiration on finding that <em>special</em> first bit&mldr; and then the desperate search for the <em>second</em> bit to suit the first&mldr;</p>
+<p>I do get asked about my process. I will write something in the <a href=/thoughts>thoughts</a> section one day. Till then, heres a short precis. This seems to correlate with other workers in the field, particularly the moment of inspiration on finding that <em>special</em> first bit&mldr; and then the desperate search for the <em>second</em> bit to suit the first&mldr;</p>
 <ol>
 <li>Collect junk.</li>
 <li>Collect more junk.</li>
-<li>Sort and clean,</li>
+<li>Sort and clean.</li>
 <li>Pick up one piece and get inspired by the possibilities.</li>
 <li>Add other larger pieces till 90% complete.</li>
 <li>Accessorise with details till done.</li>
