--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class=enter>
 <button onclick="window.location.href='/works/'" class="button is-white is-large is-outlined">enter</button>
 </div>
-<p>Found object art from Tasmania.</p>
+<p>Found object sculpture from Tasmania.</p>
 <p>Giving junk new life...</p>
 </div>
 </div>
