Noodling with config. Added Google analytics & FBlink.

--- a/about/index.html
+++ b/about/index.html
@@ -60,8 +60,8 @@
 </a>
 </div>
 <div class=social>
-<a href=https://github.com/celephicus target=_blank>
-<i class="fab fa-github fa-lg"></i>
+<a href=https://www.facebook.com/redgumandrust target=_blank>
+<i class="fab fa-facebook fa-lg"></i>
 </a>
 </div>
 </div>
@@ -94,8 +94,6 @@
 </figure>
 </div>
 <br>
-<h1 id=about>About</h1>
-<p>I don&rsquo;t normally write about myself in the passive voice (<em>i.e</em> without using the &ldquo;I&rdquo; pronoun) it seems strangely odd and distances myself from I, and creates a sense of unreality.</p>
 <h2 id=bio>Bio</h2>
 <p>Tom has been fascinated by machinery for as long as he can remember. Especially old, obsolete machinery, unloved, just short of the junk pile. Usually this fascination involved taking it apart. For the last decade hes started putting it back together, in new forms&mldr;</p>
 <p>He has no art training, having been told at school that because he couldn&rsquo;t draw he was excluded from art. He has worked as an engineer all his adult life, bouncing between electronics and computer programming, across a variety of industries, but always with an appreciation of the whimsical.</p>
@@ -127,10 +125,14 @@
 <footer class=footer>
 <div class="content has-text-centered">
 <p>
-All rights reserved. You may use content with attribution and a link to this site. <br>
+All rights reserved. You may use content for non-commercial purposes with attribution and a link to this site. <br>
 © 2023, Tom Harris (Redgum & Rust).
 </p>
 </div>
 </footer>
 </body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F71DGJ6D2D"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-F71DGJ6D2D',{anonymize_ip:!1})}</script>
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-F71DGJ6D2D','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </html>
