--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </a>
 </div>
 <div class=social>
-<a href=https://github.com/celephicus target=_blank>
-<i class="fab fa-github fa-lg"></i>
+<a href=https://www.facebook.com/redgumandrust target=_blank>
+<i class="fab fa-facebook fa-lg"></i>
 </a>
 </div>
 </div>
@@ -70,11 +70,15 @@
 <div class=welcome-end>
 <div class="content has-text-centered">
 <p>
-All rights reserved. You may use content with attribution and a link to this site. <br>
+All rights reserved. You may use content for non-commercial purposes with attribution and a link to this site. <br>
 © 2023, Tom Harris (Redgum & Rust).
 </p>
 </div>
 </div>
 </section>
 </body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F71DGJ6D2D"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-F71DGJ6D2D',{anonymize_ip:!1})}</script>
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-F71DGJ6D2D','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </html>
