Seems to lose last commit?? Anyway there are lots of updates.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="hero-body has-text-centered">
 <div class=container>
 <div class=enter>
-<button onclick="window.location.href='/works/'" class="button is-white is-large is-outlined">enter</button>
+<button onclick="window.location.href='/favourites/'" class="button is-white is-large is-outlined">enter</button>
 </div>
 <p>Found object sculpture from Tasmania.</p>
 <p>Giving junk new life...</p>
