--- a/works/misc/sunbeam/index.html
+++ b/works/misc/sunbeam/index.html
@@ -36,14 +36,16 @@
 <nav class=navbar role=navigation aria-label="main navigation">
 <div class=navbar-start>
 <div class=logo>
-<a href=/works/>
+<a href=/favourites/>
 <img class=logo src=http://redgumandrust.com.au/logo.png>
 </a>
 </div>
 </div>
 <div class=navbar-middle>
-<a class=a-clean href=/works/><p class=welcome-title>Redgum & Rust</p></a>
+<a class=a-clean href=/favourites/><p class=welcome-title>Redgum & Rust</p></a>
 <div class=menu>
+<a href=/favourites/>favourites</a>
+/
 <a href=/works/>works</a>
 /
 <a href=/figures/>figures</a>
@@ -93,6 +95,7 @@
 <div class="center column slide-meta-el">
 <div class=slide-tags>
 <a class=grey href=http://redgumandrust.com.au/tags/misc>#misc</a>
+<a class=grey href=http://redgumandrust.com.au/tags/favourites>#favourites</a>
 </div>
 </div>
 <div class="center column slide-meta-el grey">
@@ -118,10 +121,11 @@
 </ul>
 </details>
 </div>
-<p><strong>Sunbeam</strong> was a long time in the making. The inspiritational piece for me was when my son picked up an old Sunbeam brand cake mixer on hard rubbish, and then he dropped it and broke off the handle, which was made of brittle bakelite. I then removed the handle, and the hole in the top looked like a cockpit, with the lovely 50s design of the mixer forming the body of a retro-futuristic vehicle. Somehow a pair of wheels from the nozzle of a garden blower got fitted, and a single trailing wheel that came from a sewing machine.</p>
+<p><strong>Sunbeam</strong> was a long time in the making. The inspiritational piece for mewas when I picked up an old Sunbeam brand cake mixer on hard rubbish, and then I dropped it and broke off the handle, which was made of brittle bakelite. I then removed the handle, and the hole in the top looked like a cockpit, with the lovely 50s design of the mixer forming the body of a retro-futuristic vehicle. Somehow a pair of wheels from the nozzle of a garden blower got fitted, and a single trailing wheel that came from a sewing machine.</p>
 <p>But there it stalled, as I wanted a figure in the cockpit, and I could never find one&mldr; until years later I found a fairly hideous doll which I&rsquo;m told is a &ldquo;Bratz&rdquo;, and the legs came off and she became a cyborg, a post-human creature. Since I am a fan of Studio Ghibli movies I made a little propellor out of a brass valve because anything can fly if it has a propellor.</p>
 <p>I left her sitting on my bench at my shared studio space at Footscray Maker Lab, and Emily the caretaker wandered by. She loved Sunbeam and added her own vision of a leopard print crop top and a hairdo using industrial strength hair lacquer made specially for punks.</p>
 <p>Since then Sunbeam has always been around my house, a little ray of sushine with a heart of gold if you can get over the miniature-cyborg-punk-doll vibe.</p>
+<p>Here&rsquo;s Emily in her caravan and succulent garden.</p>
 <p>Before Emily&rsquo;s makeover&mldr;</p>
 <p><img src=/images/works/sunbeam/20180319_161359.jpg alt=Before></p>
 <p>And after&mldr;</p>
