--- a/figures/index.html
+++ b/figures/index.html
@@ -33,14 +33,16 @@
 <nav class=navbar role=navigation aria-label="main navigation">
 <div class=navbar-start>
 <div class=logo>
-<a href=/works/>
+<a href=/favourites/>
 <img class=logo src=http://redgumandrust.com.au/logo.png>
 </a>
 </div>
 </div>
 <div class=navbar-middle>
-<a class=a-clean href=/works/><p class=welcome-title>Redgum & Rust</p></a>
+<a class=a-clean href=/favourites/><p class=welcome-title>Redgum & Rust</p></a>
 <div class=menu>
+<a href=/favourites/>favourites</a>
+/
 <a href=/works/>works</a>
 /
 <a class=active href=/figures/>figures</a>
@@ -89,11 +91,28 @@
 <img src=/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1500 onclick=openSlider(),currentSlide(1)>
 </div>
 </div>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/aurora/Aurora%20P7273184_huce885ef48ddada59f33cb6c4ecaae320_463580_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1340 onclick=openSlider(),currentSlide(4)>
+</div>
+</div>
 </div>
 <div class=column>
 <div class=center>
 <div class=image-box>
 <img src=/images/works/the-reader/10547759_715064518531161_5958528345548140784_o_hu94f226fa66d2963814dbcc4ff3be4e98_65635_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1499 onclick=openSlider(),currentSlide(2)>
+</div>
+</div>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/celeste-goes-dancing/Celeste2_hu688f152922e3d490336893c421843a19_534706_1000x0_resize_box_3.png loading=lazy width=1000 height=1503 onclick=openSlider(),currentSlide(5)>
+</div>
+</div>
+</div>
+<div class=column>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/astrid/20230906_111530_huf8585a91d035c37d8b74a32ccc0f797c_207743_1000x0_resize_q75_r270_box.jpg loading=lazy width=1000 height=1333 onclick=openSlider(),currentSlide(3)>
 </div>
 </div>
 </div>
@@ -112,13 +131,30 @@
 <div class="columns work-width is-mobile is-multiline">
 <div class=column>
 <div class=center>
-<div class="image-box alittle">
+<div class=image-box>
 <img src=/images/works/miss-new-zealand/1890591_650124315025182_1948400077_o_hub52c3687a768fec29aff7385c7bd01e5_59667_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1500 onclick=openSlider(),currentSlide(1)>
 </div>
 </div>
 <div class=center>
-<div class="image-box alittle">
+<div class=image-box>
+<img src=/images/works/astrid/20230906_111530_huf8585a91d035c37d8b74a32ccc0f797c_207743_1000x0_resize_q75_r270_box.jpg loading=lazy width=1000 height=1333 onclick=openSlider(),currentSlide(3)>
+</div>
+</div>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/celeste-goes-dancing/Celeste2_hu688f152922e3d490336893c421843a19_534706_1000x0_resize_box_3.png loading=lazy width=1000 height=1503 onclick=openSlider(),currentSlide(5)>
+</div>
+</div>
+</div>
+<div class=column>
+<div class=center>
+<div class=image-box>
 <img src=/images/works/the-reader/10547759_715064518531161_5958528345548140784_o_hu94f226fa66d2963814dbcc4ff3be4e98_65635_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1499 onclick=openSlider(),currentSlide(2)>
+</div>
+</div>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/aurora/Aurora%20P7273184_huce885ef48ddada59f33cb6c4ecaae320_463580_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1340 onclick=openSlider(),currentSlide(4)>
 </div>
 </div>
 </div>
@@ -212,6 +248,197 @@
 </div>
 <p><strong>The Reader</strong> is just made to sit on a shelf and keeps very much to herself (I always think of it as a &ldquo;her&rdquo;). I&rsquo;m not sure what she&rsquo;s made of, just some rusty iron I picked up, I do remember being inspired by the wonderful textures that rust gives to iron after a few years or decades.</p>
 <p>Her legs are a pair of hinges from an old Singer sewing machine that allowed it to fold away into the wooden base.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=slide info=true path=/works/figures/astrid/>
+<div>
+<div class="slide-imgs fullheight">
+<div>
+<div class="center column slide-meta-title">
+<a class=a-clean href=/works/figures/astrid/>Astrid</a>
+</div>
+<div>
+<div>
+<img src=/images/works/astrid/20230906_111530_huf8585a91d035c37d8b74a32ccc0f797c_207743_3000x0_resize_q75_r270_box.jpg loading=lazy width=3000 height=4000>
+</div>
+</div>
+<div class=center>
+<div class="slide-meta columns is-mobile">
+<div class="center column slide-meta-el">
+<div class=slide-tags>
+<a class=grey href=http://redgumandrust.com.au/tags/figures>#figures</a>
+</div>
+</div>
+<div class="center column slide-meta-el grey">
+<p>September 6, 2023</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=center>
+<div class=slide-info>
+<div class="content margin-bottom-50">
+<div class=exif>
+<details>
+<summary>Exif</summary>
+<ul>
+<li>Date: September 6, 2023</li>
+<li>Aperture: 2.00</li>
+<li>Brightness: 4.15</li>
+<li>Exposure Time: 1/120</li>
+<li>F Number: 2</li>
+<li>Focal Length: 4.6</li>
+<li>ISO Speed Ratings: 32</li>
+<li>Model: SM-A217F</li>
+</ul>
+</details>
+</div>
+<p>Size: height 36cm; width 22cm, depth 10cm.
+Materials: electric motor part as base, car parts, lampshade, chandelier parts, metal blind cord, door lock, salvaged wood, workshop scraps.
+Date: 2018.</p>
+<p><strong>Astrid</strong> was an attempt to make a sister for <a href=/works/figures/celeste-goes-dancing/>Celeste</a>, but I never managed to get the oscillating mechanism working reliably. So I used the armature from an induction motor as the base, nice and heavy and an interesting design without overwhelming the figure.</p>
+<p>She is not a copy of Celeste, but the resemblance is certaintly striking. Her arms came from the same chandelier, but the door lock forming her face is a completely different shape, making her look a bit gaunt.<br>
+Her hair is from an offcut of old growth oregon that I found in the roof of my shared studio, probably left when it was built in the 1960&rsquo;s. The growth rings are very close together, indicating that it was grown in a cold climate, likely Canada. Now timber of that quality would be used for fine furniture or boatbuilding.
+Her legs are foam rubber tubes, not from pipe insulation but from a trouser hanger with a lovely matte texture. I really like the effect. Her shoes are some rusty engine part that I found a bucket of at the scrapyard.</p>
+<p>Astrid has a string of pearls (an essential accoutrement for the flapper) that are really a bit of that metal blind cord with lots of little beads on it. The proper name is &ldquo;bead chain&rdquo;.</p>
+<p>Her eyes are fantastic, and (like Celeste) slightly asymmetric, I have no idea where they came from. I wish I could remember, I&rsquo;d get some more!</p>
+<p>Astrid currently lives on our kitchen windowsill.</p>
+<p>Here&rsquo;s a group shot with her sisters:</p>
+<p><img src=/images/works/groups/20230908_114140.jpg alt=flappers></p>
+<p>Here she is in pieces, poor thing, but she managed to pull herself together. The eagle-eyed will notice that I was using black plastic for her legs, must have been before I got the blue foam.</p>
+<p><img src=/images/works/astrid/IMG20180617180048.jpg alt="All in pieces&mldr;"></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=slide info=true path=/works/figures/aurora/>
+<div>
+<div class="slide-imgs fullheight">
+<div>
+<div class="center column slide-meta-title">
+<a class=a-clean href=/works/figures/aurora/>Aurora</a>
+</div>
+<div>
+<div>
+<img src=/images/works/aurora/Aurora%20P7273184_huce885ef48ddada59f33cb6c4ecaae320_463580_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=4021>
+</div>
+</div>
+<div class=center>
+<div class="slide-meta columns is-mobile">
+<div class="center column slide-meta-el">
+<div class=slide-tags>
+<a class=grey href=http://redgumandrust.com.au/tags/figures>#figures</a>
+</div>
+</div>
+<div class="center column slide-meta-el grey">
+<p>July 27, 2023</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=center>
+<div class=slide-info>
+<div class="content margin-bottom-50">
+<div class=exif>
+<details>
+<summary>Exif</summary>
+<ul>
+<li>Date: July 27, 2023</li>
+<li>Exposure Time: 1/60</li>
+<li>F Number: 2.8</li>
+<li>Focal Length: 31</li>
+<li>ISO Speed Ratings: 200</li>
+<li>Model: E-M5MarkIII</li>
+<li>Lens Model: OLYMPUS M.12-40mm F2.8</li>
+</ul>
+</details>
+</div>
+<h3 id=details>Details</h3>
+<p>Size: height 40cm; base 20cm x 20cm.<br>
+Materials: scrap hardwood, electric heater base, reproduction blender, lampshade, chandelier parts, door lock, salvaged wood, Christmas lights.<br>
+Date: 2023.<br>
+Note: requires mains 240V power.</p>
+<h3 id=art-from-trash>Art From Trash</h3>
+<p><strong>Aurora</strong> was made for the annual &ldquo;Art From Trash&rdquo; art show in 2023 at the Long Gallery, Salamanca Arts Centre, Hobart. Organised by South Hobart Tip Shop, perhaps the premier tip shop in the state, though Mornington is pretty good as well.</p>
+<p>Here&rsquo;s the artist&rsquo;s description I wrote:</p>
+<pre><code>Aurora is a party girl from the 1920’s, a “flapper” as they were called with bobbed hair and 
+short (showing her knees!) dress. She never goes out without her string of pearls. Now along 
+a bit in years but still up for a good time. She only dances when people are near, a bit of a 
+showoff!
+
+The head was suggested to me from an offcut of red pine from an old bed frame I was given, 
+at least 50 years old. I just thought “1920’s hairdo”. There the matter rested till I found 
+an old door lock at the tip shop. Then she had a face. Her frock, arms and hands are from old 
+light fittings, and make her a very graceful dancer. The base mechanism is from a heater 
+with the body of a blender attached, top made from a monitor screen, and old Christmas lights 
+inside. People sensor from a broken smart heat pump.
+
+All materials were discarded rubbish, even the nuts and bolts. Many of them are from Margate 
+Tip Shop and from donations to Hobart Hackerspace. 
+</code></pre>
+<h2 id=description>Description</h2>
+<p>She is another flapper, a sister to <a href=/works/figures/celeste-goes-dancing>Celeste</a>, but of course she differs in the details. Here&rsquo;s a group shot:</p>
+<p><img src=/images/works/groups/20230908_114140.jpg alt=flappers></p>
+<p>Her arms came off a hideous 1970&rsquo;s gilt chandelier, but look much better made into arms. I also managed to find two pieces that make excellent hands, these held the glass shade of a light in place. Oh how I love light fittings!</p>
+<p>The door lock for her face actually came from the tip shop, a nice touch. They gave it to me as it was missing the bit that goes on the door, but I never found a use for those bits, besides I&rsquo;d sooner leave a working lock for someone who needs one.<br>
+Her eyes are rubber paper feeding bits from a computer printer, that give her my trademark staring eyes look. The green pupils are from a broken plastic chopping mat, a nice colour & texture.<br>
+Her hair is a piece of some old growth softwood, very close grained, it might by celerytop pine; it came from an old bed frame I was given. Now such timber would be reserved for boatbuilding. This time I gave her pearl earrings: more bead chain from a roller blind with a bead from a broken neclklace on the end.</p>
+<p>Her legs are plastic tubing from a bathroom shower, they look pretty special. Her feet are the bits I cut off the light fitting to make her hands. Waste not want not!</p>
+<p>Her podium is identical to that I made for Celeste: a retro blender case with a sheet of plastic from a LCD monitor on top.<br>
+But the lightshow is rather different, rather than using the LEDs that change colour on their own I had to use the programmable coloured LED strip. THis was because the flashing LEDs had somehow corroded in storage to the point where I ouldn&rsquo;t reliably solder the leads. So I took them out and used a strip of addressable RGB LEDs and a controller like <a href=/works/fragments/i-made-it-myself/>I Made It Myself</a>. I made the lights fade a bit faster and added a bit of flashing, but not too much.</p>
+<p>As a final nice touch I fitted a movement sensor to her, same sort that are used in burglar alarms. This turns on the lightshow when it triggers, than a few seconds later she does a few twirls. This had the intended effect, as people would pause to look at her, then she would start dancing, I heard a few &ldquo;ooohs&rdquo;. Nice to give a bit of happiness.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=slide info=true path=/works/figures/celeste-goes-dancing/>
+<div>
+<div class="slide-imgs fullheight">
+<div>
+<div class="center column slide-meta-title">
+<a class=a-clean href=/works/figures/celeste-goes-dancing/>Celeste Goes Dancing</a>
+</div>
+<div>
+<div>
+<img src=/images/works/celeste-goes-dancing/Celeste2_hu688f152922e3d490336893c421843a19_534706_3000x0_resize_box_3.png loading=lazy width=3000 height=4509>
+</div>
+</div>
+<div class=center>
+<div class="slide-meta columns is-mobile">
+<div class="center column slide-meta-el">
+<div class=slide-tags>
+<a class=grey href=http://redgumandrust.com.au/tags/figures>#figures</a>
+<a class=grey href=http://redgumandrust.com.au/tags/favourites>#favourites</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=center>
+<div class=slide-info>
+<div class="content margin-bottom-50">
+<h1 id=celeste-goes-dancing>Celeste Goes Dancing</h1>
+<p>Size: base 17cm x 17cm; height 40cm.
+Materials: electric heater base, reproduction blender, lampshade, chandelier parts, door lock, salvaged wood, Christmas lights.
+Date: 2015.
+Note: requires mains 240V power.</p>
+<p><strong>Celeste Goes Dancing</strong> was my earliest attempt at a kinetic (moving) sculpture. The name comes from a book of South American fantastic short stories that I owned when I was into the magical realism style, I remember nothing about the book apart that it was my introduction to the wonder of Jorge Luis Borges, so it deserves to be memorialised.</p>
+<p><img src=/images/works/celeste-goes-dancing/Celeste1.png alt="close up"></p>
+<p>She is a depiction of a &ldquo;flapper&rdquo;, the party girls of the 1920&rsquo;s, who were simultaneously lionised and demonised by the media of the time (oddly enough for the same reasons). The canonical flapper had a bobbed haircut and a shamefully short dress and was usually photographed as though in the midst of some energetic crazy dance. To learn more, read about the insane exploits of Zelda Fitzgerald or immerse youself in the wonderful madness of the &ldquo;Bright Young Things&rdquo; in Evelyn Waugh&rsquo;s &ldquo;Vile Bodies&rdquo;, also a good movie. Anyway you get the picture, I have a mild appreciation of the 1920&rsquo;s.</p>
+<p>I don&rsquo;t recall the genesis of the design, beyond picking up the door lock part that forms her mouth, and having inspiration strike. I made her hair from a piece of salvaged timber from the benches in a 1960&rsquo;s chemistry laboratory; the wonderful patina is a result of stains from it lying in the rain on my steel welding bench. I&rsquo;m not sure what her eyes were made of (perhaps parts out of an old printer?), but they look fantastic with the wild eyelashes, and a little bit asymmetric, perhaps she&rsquo;s been at the &ldquo;naughty salt&rdquo; (see <em>Vile Bodies</em>!). I was going to give her earrings, but it never happened, so she must have gone out in a hurry. Her body and arms are from and old desk lamp and a chandelier respectively and give her a wonderful profile straight out of a classic 1920&rsquo;s studio photograph.<br>
+I remember looking for a while for some little item for the feet, and I found a locking mechanism from a golfing umbrella had just the look I wanted, like tiny slippers. Her legs are hollow foam rubber intended for pipe insulation, very handy stuff.</p>
+<p>Her podium is a reproduction retro food blender that I cut up and mounted a patterned plastic sheet from the light diffuser in an LCD computer monitor. Inside this is about 20 or so special LEDs intended for Christmas lights or similar, they randomly show different colours and rhythms. Quite suitable for a party!</p>
+<p>The podium is mounted on a base for an oscillating heater, one of those that moved slowly from side to side. The mechanism for these is so simple I hope the inventor got their due. Basically the top can rotate on a bearing and has a portion of ring gear, about 1/8 of a circle, with endstops that prevent rotation beyond the end of the ring gear. It rotates on a base which has a motor with a cog that engages with the ring gear. It rotates until it hits the end stop, then the motor stalls and then reverses due to <em>magic</em> (as an electrical enigineer I do know <em>exactly</em> why, but the explanation is out of place in an art blog). It is similar to those in microwaves that rotate the turntable, which will start in either direction randomly. Unfortunately the motors run on mains power only, I would much prefer to use safe low voltages.</p>
+<p>Celeste Goes Dancing is one of my special pieces, I really like having her around, I fire her up now and again for a spin (as it were). I have made her some sisters over the years, currently Astrid and Aurora. Here&rsquo;s a group shot:</p>
+<p><img src=/images/works/groups/20230908_114140.jpg alt=flappers></p>
 </div>
 </div>
 </div>
