--- a/works/figures/the-reader/index.html
+++ b/works/figures/the-reader/index.html
@@ -36,14 +36,16 @@
 <nav class=navbar role=navigation aria-label="main navigation">
 <div class=navbar-start>
 <div class=logo>
-<a href=/works/>
+<a href=/favourites/>
 <img class=logo src=http://redgumandrust.com.au/logo.png>
 </a>
 </div>
 </div>
 <div class=navbar-middle>
-<a class=a-clean href=/works/><p class=welcome-title>Redgum & Rust</p></a>
+<a class=a-clean href=/favourites/><p class=welcome-title>Redgum & Rust</p></a>
 <div class=menu>
+<a href=/favourites/>favourites</a>
+/
 <a href=/works/>works</a>
 /
 <a href=/figures/>figures</a>
