Added coffee table.

--- a/favourites/index.html
+++ b/favourites/index.html
@@ -91,18 +91,23 @@
 <img src=/images/works/celeste-goes-dancing/Celeste2_hu688f152922e3d490336893c421843a19_534706_1000x0_resize_box_3.png loading=lazy width=1000 height=1503 onclick=openSlider(),currentSlide(1)>
 </div>
 </div>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=859 onclick=openSlider(),currentSlide(4)>
+</div>
+</div>
 </div>
 <div class=column>
 <div class=center>
 <div class=image-box>
-<img src=/images/works/sound-wave/t1_hub92bd0978e923092b8c54d7dc4ae533b_533954_1000x0_resize_box_3.png loading=lazy width=1000 height=1269 onclick=openSlider(),currentSlide(2)>
+<img src=/images/works/coffee-table/IMG20180423200552_hu6e550c3c8c1a7066167fd3356e565187_354425_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1333 onclick=openSlider(),currentSlide(2)>
 </div>
 </div>
 </div>
 <div class=column>
 <div class=center>
 <div class=image-box>
-<img src=/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=859 onclick=openSlider(),currentSlide(3)>
+<img src=/images/works/sound-wave/t1_hub92bd0978e923092b8c54d7dc4ae533b_533954_1000x0_resize_box_3.png loading=lazy width=1000 height=1269 onclick=openSlider(),currentSlide(3)>
 </div>
 </div>
 </div>
@@ -127,14 +132,19 @@
 </div>
 <div class=center>
 <div class=image-box>
-<img src=/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=859 onclick=openSlider(),currentSlide(3)>
+<img src=/images/works/sound-wave/t1_hub92bd0978e923092b8c54d7dc4ae533b_533954_1000x0_resize_box_3.png loading=lazy width=1000 height=1269 onclick=openSlider(),currentSlide(3)>
 </div>
 </div>
 </div>
 <div class=column>
 <div class=center>
 <div class=image-box>
-<img src=/images/works/sound-wave/t1_hub92bd0978e923092b8c54d7dc4ae533b_533954_1000x0_resize_box_3.png loading=lazy width=1000 height=1269 onclick=openSlider(),currentSlide(2)>
+<img src=/images/works/coffee-table/IMG20180423200552_hu6e550c3c8c1a7066167fd3356e565187_354425_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1333 onclick=openSlider(),currentSlide(2)>
+</div>
+</div>
+<div class=center>
+<div class=image-box>
+<img src=/images/works/sunbeam/DSC_0644_hub43323ca31858e5ebb521f9b0708a4c4_109236_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=859 onclick=openSlider(),currentSlide(4)>
 </div>
 </div>
 </div>
@@ -182,6 +192,60 @@ I remember looking for a while for some little item for the feet, and I found a 
 <p>The podium is mounted on a base for an oscillating heater, one of those that moved slowly from side to side. The mechanism for these is so simple I hope the inventor got their due. Basically the top can rotate on a bearing and has a portion of ring gear, about 1/8 of a circle, with endstops that prevent rotation beyond the end of the ring gear. It rotates on a base which has a motor with a cog that engages with the ring gear. It rotates until it hits the end stop, then the motor stalls and then reverses due to <em>magic</em> (as an electrical enigineer I do know <em>exactly</em> why, but the explanation is out of place in an art blog). It is similar to those in microwaves that rotate the turntable, which will start in either direction randomly. Unfortunately the motors run on mains power only, I would much prefer to use safe low voltages.</p>
 <p>Celeste Goes Dancing is one of my special pieces, I really like having her around, I fire her up now and again for a spin (as it were). I have made her some sisters over the years, currently Astrid and Aurora. Here&rsquo;s a group shot:</p>
 <p><img src=/images/works/groups/20230908_114140.jpg alt=flappers></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=slide info=true path=/works/misc/coffee-table/>
+<div>
+<div class="slide-imgs fullheight">
+<div>
+<div class="center column slide-meta-title">
+<a class=a-clean href=/works/misc/coffee-table/>Coffee Table</a>
+</div>
+<div>
+<div>
+<img src=/images/works/coffee-table/IMG20180423200552_hu6e550c3c8c1a7066167fd3356e565187_354425_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=4000>
+</div>
+</div>
+<div class=center>
+<div class="slide-meta columns is-mobile">
+<div class="center column slide-meta-el">
+<div class=slide-tags>
+<a class=grey href=http://redgumandrust.com.au/tags/misc>#misc</a>
+<a class=grey href=http://redgumandrust.com.au/tags/favourites>#favourites</a>
+</div>
+</div>
+<div class="center column slide-meta-el grey">
+<p>April 23, 2018</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=center>
+<div class=slide-info>
+<div class="content margin-bottom-50">
+<div class=exif>
+<details>
+<summary>Exif</summary>
+<ul>
+<li>Date: April 23, 2018</li>
+<li>Aperture: 2.27</li>
+<li>Exposure Time: 1/14</li>
+<li>F Number: 2.2</li>
+<li>Focal Length: 3.46</li>
+<li>ISO Speed Ratings: 684</li>
+<li>Model: CPH1701</li>
+</ul>
+</details>
+</div>
+<p>One of my massive furniture pieces. I needed a coffee table for my flat, and just be a happy coincidence there was a large truck motor hanging around at my shared studio space &ldquo;Footscray Maker Lab&rdquo; or <a href=https://footscraymakerlab.com/ target=_blank rel=noopener>FML</a>; as so often happens in such places some tenant had acquired an item and then left, usually owing rent, so their abandoned items just hung around taking up space. It was mounted on a heavy trolley so that it could be moved with difficulty as it weighed half a ton at least. The trolley had 4 lovely industrial wheels, so I offered to take it to the scrapyard, if I could have the wheels.</p>
+<p>The top was an ironbark sleeper that I found on hard rubbish. Ironbark is a timber that it very resistant to rot; like redgum it grows in swamps so is often used for outdoor uses like retaining walls or similar. The sleeper had quite a lot of sapwood (soft wood that rots very quickly) so I just removed the crumbly bits with a wire brush then stabilised it with dilute poyurethane varnish. I chopped the sleeper into 4 pieces then fixed them all side by side, using threaded rods to tie them together: no fine woodworking skills here. Truing the top was a real chore, ironbark is hard as nails and like redgum the grain seems to go in random directions. Historically it was used green (unseasoned) as it was too much like hard work to cut it dry. I ended up using a planer with a carbide blade and then a large belt sander.</p>
+<p>I cut up the trolley and rewelded it to suit the top. One day I should replace the bent bits of fencing wire that hold on the wheels with proper split pins.</p>
+<p>The finish is my favourite universal finish: beeswax & turpentine. It goes just as well on steel or wood, polishes up a treat and it very easy to refinish if it gets marks. Despite taking very little care with it I have never had to refinish it.</p>
+<p>Of course it it very heavy, probably 100Kg or so. But since it is on wheels it is easy to move around. It will last forever.</p>
 </div>
 </div>
 </div>
